# gtwd-CS205-C-CPP

./: .gitignore  CMakeLists.txt  README.md  gtwd.run.xml  main.cpp
AIFF/: Aiff2wav.cpp  Aiff2wav.h  Wav2aiff.cpp  Wav2aiff.h
Decoder/: Flac2pcm.cpp  Flac2pcm.h  Flac2wav.cpp  Flac2wav.h  FlacMetadata.cpp  FlacMetadata.h  Pcm2wav.h  Wav2flac.cpp  Wav2flac.h  Wav2pcm.cpp  Wav2pcm.h
Encoder/: Flac2wav.cpp  Flac2wav.h  FlacMetadata.cpp  FlacMetadata.h  Pcm2wav.cpp  Wav2flac.cpp  Wav2flac.h
Gui/: index.html  main.js  renderer.js
Gui/exec/mac/: gtwd
Libraries/: SimpleIni.h  tempfile.cpp  tempfile.h
ProvidedDocuments/: 2.flac  out.flac  ovs.ini  ovs.json
ProvidedDocuments/flac/: mono.flac
Utils/: FileIO.cpp  MD5.cpp  MD5.h  Utils.h  fileIO.cpp
